# minbt

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py
docs/design/: DESIGN-001-broker-account-market-api.md  DESIGN-002-data-feeds-and-callbacks.md  README.md  broker-20260629-interface.md  broker-market-routing-20260701-design.md  data-feed-20260701-design.md  minbt-20260630-system-design.md  plot-20260706-examples.md
docs/dev/: PLAN-001-review-fix-OUTCOME.md  PLAN-001-review-fix.md  PLAN-002-kernel-review-OUTCOME.md  PLAN-002-kernel-review.md  PLAN-003-review-fixes-OUTCOME.md  PLAN-003-review-fixes.md  PLAN-004-docs-skills-OUTCOME.md  PLAN-004-docs-skills.md  PLAN-005-system-review-fixes-OUTCOME.md  PLAN-005-system-review-fixes.md  PLAN-006-examples.md  (+70 more)
examples/: 01_demo_mini.py  02_single_symbol_sma.py  03_multi_symbol_rotation.py  04_scenario_exit_rules.py  05_scenario_limit_order.py  06_scenario_single_breakout.py  07_scenario_multi_rotation.py  08_scenario_pairs_mean_reversion.py  09_benchmark_100k_empty.py  10_scenario_cross_market.py  11_crypto_binance_feed.py  data.csv  demo_macross.py  demo_mini.py  example_utils.py  multi_symbol_rotation.py  plot_utils.py  scenario_exit_rules.py  single_symbol_sma.py
minbt/: __init__.py  _exchange_api.py  exchange.py  exchange_api.py  logger.py  plot.py  strategy.py
tests/: test_api_contract.py  test_broker.py  test_cash.py  test_data_feed.py  test_design_mvp.py  test_examples.py  test_exchange.py  test_exit_conditions.py  test_logger.py  test_portfolio.py  test_portfolio2.py  test_position.py  test_strategy.py
(+17 files in other folders)
